tests/miniJava/neg/005284_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] void java ( ) { return 0 ; } }
